<resources>
    <string name="app_name">Bowling</string>
    <string name="ongoing_game">Ongoing Game</string>
    <string name="score">Score</string>
    <string name="next_bowl">Next Round</string>
    <string name="Scoreboard">Scoreboard</string>
    <string name="frame_current">Current Frame</string>
    <string name="number_of_pin_dropped">Put number of pin fall</string>
    <string name="pins_to_knock_down">Pins To Knock Down</string>
    <string name="invalid_pin_input"> Please input a valid number of Pins! </string>
    <string name="reset">Play Again</string>
    <string name="game_over">Game Over</string>
</resources>