<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/current_game"
        android:title="@string/ongoing_game" />

    <item
        android:id="@+id/current_score"
        android:title="@string/score" />
</menu>
